[project]
name = "coinor.dippy"
version = "1.95.4"
description="DIP Python Interface"
readme="README.md"
authors=[
  {  name = "Michael O'Sullivan", email = "michael.osullivan@auckland.ac.nz"  }, 
  {  name = "Qi-Shan Lim"  },
  {  name = "Stuart Mitchell"  },
  {  name =  "Ted Ralphs", email = "ted@lehigh.edu"  }
]
dependencies = [
  'pulp>=1.5.4,<=2.9.0',
  'coinor.gimpy>=2.0.0',
  'future'
]
license='EPL-2.0'
dynamic=[]

[project.urls]
"Home Page"="https://github.com/coin-or/DIP"

[build-system]
requires = [
  'setuptools'
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Use --no-third-party to avoid linking in GLPK.
# The resulting binary would not be distributable.
# We have to fetch in a subdirectory (build) because
# otherwise, coinbrew doesn't properly get the release.
before-all = """
  set -x
  apt-get install --yes wget || yum install -y wget || brew install bash coreutils
  mkdir build
  cd build
  wget https://raw.githubusercontent.com/coin-or/coinbrew/master/coinbrew
  sed -i.bak '/invoke_make/s/install/-j1 install/' coinbrew
  chmod +x coinbrew
  case "$(uname -m)" in
      arm64) config_args="--build=arm-apple-darwin";;
      aarch64) config_args="--build=aarch64-unknown-linux-gnu";;
  esac
  ./coinbrew fetch Dip@0.95.1 --no-third-party && eval ./coinbrew build Dip --no-third-party --parallel-jobs 16 --prefix=$(pwd)/local --tests none --verbosity 4 $config_args || (cat build/Data/Sample/1.2.12/config.log; echo ignoring errors)
"""
environment = { PATH="$(pwd)/build/local/bin:$PATH", LD_LIBRARY_PATH="$(pwd)/build/local/lib:$LD_LIBRARY_PATH", PKG_CONFIG_PATH="$(pwd)/build/local/lib/pkgconfig:$PKG_CONFIG_PATH", CIBW_ARCHS="$CIBW_ARCHS" }
skip = ["*-musllinux*", "cp38-*", "cp312-*i686"]


